~~~~~~~~~~~~~~~~~~~~~~
version 0.7.1
~~~~~~~~~~~~~~~~~~~~~~

* allowed open mail relays for when artillery is deployed internally, will use connection to connect to SMTP servers without creds
* added new flag to allow SMTP_FROM in the config, can now specify name coming from. For example "Artillery Alert Feed"
* changed the mailSever.sendmail() to use the alert address as the to/from.

~~~~~~~~~~~~~~~~~~~~~~
version 0.7
~~~~~~~~~~~~~~~~~~~~~~

* changed everything over to github versus subversion
* fixed installer to use github versus subversion
* Artillery now stores logfiles for posix (nix based) in a syslog format. 
* You can now specify a local or remote syslog server in the config file
* Bug fix for setup file would cause makedirs error, should be fixed

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.7
~~~~~~~~~~~~~~~~~~~~~~

* if monitoring is turned off, it will not import the module

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.6
~~~~~~~~~~~~~~~~~~~~~~

* fixed a typo that would cause artillery not to start in some cases
* added folder create for src/program_junk and databases/ during installation of artillery

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.5
~~~~~~~~~~~~~~~~~~~~~~

* added new config option to disable root checks

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.4
~~~~~~~~~~~~~~~~~~~~~~

* Added the ability to detect what ports are being blocked via artillery honeypot (thanks spoonman)
* Changed README to README.txt to fix an OSX bug

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.3
~~~~~~~~~~~~~~~~~~~~~~

* Move over to github

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.2
~~~~~~~~~~~~~~~~~~~~~~

* Added better error handling around the threat intelligence feed
* Added a better cleanup for Artlilery when uninstalling
* Fixed a bug that caused Artillery to error out if banlist.txt was not found

~~~~~~~~~~~~~~~~~~~~~~
version 0.6.1
~~~~~~~~~~~~~~~~~~~~~~

* bugfix that would cause thread to die under certain circumstances
* added terms to the banlist.txt file